code-gen/spim_tests/ours/t7.out
Loaded: /usr/local/Cellar/spim/9.1.19/share/exceptions.s
spim: (parser) syntax error on line 2 of file spim_tests/ours/t7.tac
	  *** failure: Assertion failed: ast_expr.cc, line 733:
	  ^
The following symbols are undefined:
main

Instruction references undefined symbol at 0x00400014
  [0x00400014]	0x0c000000  jal 0x00000000 [main]           ; 188: jal main
